--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -15,14 +15,9 @@
 
   <div class="home-content">
     <div class="home-title">
-      <div class="left-side">
+      <div class="single-side">
         <h1 class="line1">Hello,</h1>
-      </div>
-
-      <div class="middle-gap"></div>
-
-      <div class="right-side">
-        <h1 class="line2">I'm Nani</h1>
+        <h1 class="line2">I'm Dudhisty</h1>
         <h6 class="line3">Web Designer |- Programmer |- Freelancer</h6>
         <div class="buttons">
           <div class="btn-title">
@@ -32,7 +27,7 @@
             <div class="icons">
               <div class="i1">
                 <a
-                  href="https://www.linkedin.com/in/nani-neelapu-359a85232/"
+                  href="https://www.linkedin.com/in/rawlo-dudhisty-933994355"
                   target="_blank"
                   rel="noopener noreferrer"
                   style="text-decoration: none; color: white"
@@ -42,7 +37,7 @@
               </div>
               <div class="i1">
                 <a
-                  href="https://github.com/nanineelapu"
+                  href="https://github.com/Rawlo-Dudhisty"
                   target="_blank"
                   rel="noopener noreferrer"
                   style="text-decoration: none; color: white"
