--- a/src/app/home/page/page.component.html
+++ b/src/app/home/page/page.component.html
@@ -16,11 +16,11 @@
         </p>
         <div class="t1">
           <h6>Email</h6>
-          <p>neelapunani2580gmail.com</p>
+          <p>rawlodudhisty&#64;gmail.com</p>
         </div>
         <div class="t2">
           <h6>Contact</h6>
-          <p>7661891711</p>
+          <p>8249744361</p>
         </div>
 
         <!-- <h6></h6> -->
@@ -28,7 +28,7 @@
     </div>
     <div class="right">
       <img
-        src="https://firebasestorage.googleapis.com/v0/b/naniportfolio-cadd2.appspot.com/o/ond.png?alt=media&token=e8a50120-6cac-4aa7-b70b-f06e5067bd03
+        src="https://liquid-gold-pqrgp1whqa.edgeone.app/dp%20image.png
         "
         alt=""
       />
