--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -29,10 +29,10 @@
 
     <div class="footer-container">
       <div class="footer-contact">
-        <a href="mailto:neelapunani2580@gmail.com"
-          >Email : neelapunani2580&#64;gmail.com</a
+        <a href="mailto:rawlodudhisty@gmail.com"
+          >Email : rawlodudhisty&#64;gmail.com</a
         >
-        <a href="tel:+917661891711">Ph No : +91&nbsp;76618&nbsp;91711</a>
+        <a href="tel:+918249744361">Ph No : +91&nbsp;82497&nbsp;44361</a>
         <span>Open for freelance & full-time opportunities</span>
       </div>
 
@@ -42,6 +42,6 @@
       </div>
     </div>
 
-    <div class="footer-bottom">© 2025 Nani Neelapu — All rights reserved</div>
+    <div class="footer-bottom">© 2025 Dudhisty Rawlo — All rights reserved</div>
   </footer>
 </section>
